--- a/index.html
+++ b/index.html
@@ -1,54 +1,70 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
-    </head>
-    <body>
-        <!--[if lt IE 8]>
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
-            <div id="div-1" class="flex-items">
-                Div 1
-            </div>
-            <div id="div-2" class="flex-items">
-                Div 2
-            </div>
-            <div id="div-3" class="flex-items">
-                Div 3
-            </div>
-            <footer>Footer</footer>
-        </section>
+  <!-- Add your site or application content here -->
+  <section class="flex-container">
+    <header>Hi! I'm Mariana.</header>
+    <main>I'm a Responsive Designer & Developer who thrives on visual storytelling. When I am not working, pursuing side project in illustration and graphic design or getting lost in books and tv shows, I can be found taking a walk at the park or
+      cooking delicious vegan dishes.</main>
+    <div id="div-1" class="flex-items">
+      I was born in beautiful sunny Brazil. But decided it was time to get out of my confort zone a few years and moved to Germany. I am still trying to find my way around with the german language and still trying to get used to the beautiful gray of
+      Hamburg.
+    </div>
+    <div id="div-2" class="flex-items">
+      My passion: Sausage dogs. Yes, my passion. I love watching Sausage Dogs videos on Instagram. I love drawing sausage dogs, I love seeing them walking around. I used to have one, Bono, who was with me for amazing 15 years.
+    </div>
+    <div id="div-3" class="flex-items">
+      Fun fact: I love to cook and I love coffee. I am always searching for new recipes that I will absolutely not follow when I cook. I love changing stuff around, love the trial and error thing.
+    </div>
+    <footer>Reach out at <a href="mailto:hello@marianarausch.me">hello@marianarausch.me</a></footer>
+  </section>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')
+  </script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+    (function(b, o, i, l, e, r) {
+      b.GoogleAnalyticsObject = l;
+      b[l] || (b[l] =
+        function() {
+          (b[l].q = b[l].q || []).push(arguments)
+        });
+      b[l].l = +new Date;
+      e = o.createElement(i);
+      r = o.getElementsByTagName(i)[0];
+      e.src = 'https://www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e, r)
+    }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X', 'auto');
+    ga('send', 'pageview');
+  </script>
+</body>
+
 </html>
